--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
+		"dev": "vike dev",
+		"build": "vike build",
+		"preview": "vike preview",
 		"check": "biome check --write .",
 		"lint": "biome lint --write .",
 		"format": "biome format --write .",
