--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"@types/react-dom": "^18.3.1",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.4.2",
+		"sass": "^1.83.4",
 		"storybook": "^8.5.1",
 		"typescript": "^5.7.3",
 		"vike": "^0.4.214",
