--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
 	"scripts": {
-		"dev": "vike dev",
+		"dev": "nodemon --exec npm run server:dev",
+		"prod": "npm run build && npm run server:prod",
 		"build": "vike build",
-		"preview": "vike preview",
+		"server": "dotenv -- node --loader ts-node/esm ./app/server/index.ts",
+		"server:dev": "npm run server",
+		"server:prod": "cross-env NODE_ENV=production npm run server",
 		"check": "biome check --write .",
 		"lint": "biome lint --write .",
 		"format": "biome format --write .",
 		"prepare": "husky",
 		"storybook": "IS_STORYBOOK=true storybook dev -p 6006",
-		"build-storybook": "IS_STORYBOOK=true storybook build"
+		"build-storybook": "IS_STORYBOOK=true storybook build",
+		"generate-openapi": "dotenv -- bash -c 'npx openapi-typescript $VITE_BACKEND_URL/openapi.yaml -o ./shared/api/openapi.ts' && npm run check"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
@@ -28,6 +32,8 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.5",
 		"@radix-ui/react-popover": "^1.1.5",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@react-icons/all-files": "^4.1.0",
+		"@tanstack/react-query": "^5.66.0",
 		"@tippyjs/react": "^4.2.6",
 		"@tiptap/core": "^2.11.3",
 		"@tiptap/extension-character-count": "^2.11.3",
@@ -57,11 +63,18 @@
 		"@tiptap/starter-kit": "^2.11.3",
 		"@tiptap/suggestion": "^2.11.3",
 		"@vitejs/plugin-react": "^4.3.4",
+		"compression": "^1.7.5",
+		"cookie-parser": "^1.4.7",
 		"dayjs": "^1.11.13",
+		"express": "^4.21.2",
+		"express-http-proxy": "^2.1.1",
 		"lowlight": "^3.3.0",
+		"openapi-fetch": "^0.13.4",
+		"openapi-react-query": "^0.3.0",
 		"react": "^18.3.1",
 		"react-colorful": "^5.6.1",
 		"react-dom": "^18.3.1",
+		"sirv": "^3.0.0",
 		"vike-react": "^0.5.11",
 		"y-prosemirror": "^1.2.15",
 		"y-protocols": "^1.0.6",
@@ -80,12 +93,21 @@
 		"@storybook/react": "^8.5.1",
 		"@storybook/react-vite": "^8.5.1",
 		"@storybook/test": "^8.5.1",
+		"@types/compression": "^1.7.5",
+		"@types/cookie-parser": "^1.4.8",
+		"@types/express": "^5.0.0",
+		"@types/express-http-proxy": "^1.6.6",
 		"@types/react": "^18.3.1",
 		"@types/react-dom": "^18.3.1",
+		"cross-env": "^7.0.3",
+		"dotenv-cli": "^8.0.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.4.2",
+		"nodemon": "^3.1.9",
+		"openapi-typescript": "^7.6.1",
 		"sass": "^1.83.4",
 		"storybook": "^8.5.1",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.7.3",
 		"vike": "^0.4.214",
 		"vite": "^6.0.7"
