--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 		"@chromatic-com/storybook": "^3.2.4",
 		"@commitlint/cli": "^19.6.1",
 		"@commitlint/config-conventional": "^19.6.0",
+		"@mdx-js/rollup": "^3.1.0",
 		"@storybook/addon-essentials": "^8.5.1",
 		"@storybook/addon-interactions": "^8.5.1",
 		"@storybook/addon-onboarding": "^8.5.1",
